--- a/react-pitfalls/src/index.css
+++ b/react-pitfalls/src/index.css
@@ -1,4 +1,7 @@
 :root {
+  display: flex;
+  flex-direction: column;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -13,13 +16,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.basic {
+  display: flex;
+  flex-direction: column;
 }
-a:hover {
-  color: #535bf2;
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid;
+  padding: 1rem;
 }
 
 body {
@@ -28,11 +34,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
 
 button {
@@ -46,9 +47,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,9 +62,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
