--- a/react-pitfalls/src/index.css
+++ b/react-pitfalls/src/index.css
@@ -1,3 +1,10 @@
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 :root {
   display: flex;
   flex-direction: column;
@@ -6,7 +13,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -16,24 +23,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.basic {
-  display: flex;
-  flex-direction: column;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid;
-  padding: 1rem;
-}
-
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 button {
@@ -70,4 +62,26 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.basic {
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid;
+  padding: 1rem;
+}
+
+.note {
+  color: orange;
+  font-style: italic;  
+}
+
+.tracker {
+  color:#18bade
 }
